* Show admin notices on GD pages templates for Divi Builder - ADDED
* Add listing map view field shows incorrect placeholder with AUI style - FIXED
* Prevents add listing form submit when latitude/longitude fields are hidden - FIXED
* Google XML sitemaps shows GD child term links hierarchically - FIXED
* Image displayed by [gd_post_meta] is not responsive - FIXED

= 2.1.0.16 =
* Progressbar not moving during the demo content installation step - FIXED
* Hook added to filter GeoDirectory admin menu capability - ADDED
* Admin users are not allowed to access wp-admin area when they contains restricted user role - FIXED
* Map param added to disable click on Google default places - ADDED
* WPEngine object cache sometime shows wrong link in published email - FIXED
* Lazy load map not loading on mobile until page scroll on listimia theme - FIXED
* Multi-select 'gd-comma-list' class dropping last element to new line - FIXED
* Tooltips not rendering HTML - FIXED
* [gd_post_images] option added to show images for specific post - ADDED
* AUI: unable to save empty value for multiselect/multicheckbox fields - FIXED
* Category image not added in Yoast SEO meta - FIXED
* Sometime ninja form doesn't send notification to listing email - FIXED
* Disable beta addons setting on upgrade - CHANGED
* Map CPT filter only visible when search filter is active - FIXED
* Checkbox field description is not wrapped in a container ( Legacy design ) - FIXED

= 2.1.0.15 =
* OpenStreetMap popup not working with AUI - FIXED
* Multi-select list out broken if not using 'gd-comma-list' class - FIXED

= 2.1.0.14 =
* Overwrite by Rank Math don't renders GD variables - FIXED
* v1 to v2 upgrade shows missing Events plugin - FIXED
* Post meta output `gd-comma-list` not working with bootstrap styles - FIXED
* Video screenshot linking to video lightbox does not work on single image output - FIXED
* Required field text not showing for checkbox - FIXED
* Import GD elementor templates not working - FIXED