@@ -5,6 +5,7 @@
 * Prevents add listing form submit when latitude/longitude fields are hidden - FIXED
 * Google XML sitemaps shows GD child term links hierarchically - FIXED
 * Image displayed by [gd_post_meta] is not responsive - FIXED
+* Post distance badge shows wrong distance when cache is active - FIXED
 
 = 2.1.0.16 =
 * Progressbar not moving during the demo content installation step - FIXED
